--- a/MobileCalculatorApp/MobileCalculatorApp/MainPage.xaml
+++ b/MobileCalculatorApp/MobileCalculatorApp/MainPage.xaml
@@ -3,12 +3,50 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MobileCalculatorApp"
              x:Class="MobileCalculatorApp.MainPage">
+    <ContentPage.Resources>
+        <StyleSheetExtension Source="/Styles/style.css"/>
+    </ContentPage.Resources>
 
-    <StackLayout>
-        <!-- Place new controls here -->
-    	<Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
-    </StackLayout>
+    <ContentPage.Content>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Label x:Name="LblResult" Text="0" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0"/>
+
+            <Button Text="C" Grid.Row="0" Grid.Column="2" Clicked="BtnC_Clicked"/>
+
+            <Button Text="/" Grid.Row="0" Grid.Column="3" Clicked="BtnDiv_Clicked"/>
+            <Button Text="X" Grid.Row="1" Grid.Column="3" Clicked="BtnMult_Clicked"/>
+            <Button Text="-" Grid.Row="2" Grid.Column="3" Clicked="BtnSub_Clicked"/>
+            <Button Text="+" Grid.Row="3" Grid.Column="3" Clicked="BtnSum_Clicked"/>
+            <Button Text="=" Grid.Row="4" Grid.Column="3" Clicked="BtnEqual_Clicked"/>
+
+            <Button Text="7" BackgroundColor="AntiqueWhite" Grid.Row="1" Grid.Column="0" Clicked="Btn7_Clicked"/>
+            <Button Text="8" BackgroundColor="AntiqueWhite" Grid.Row="1" Grid.Column="1" Clicked="Btn8_Clicked"/>
+            <Button Text="9" BackgroundColor="AntiqueWhite" Grid.Row="1" Grid.Column="2" Clicked="Btn9_Clicked"/>
+
+            <Button Text="4" BackgroundColor="AntiqueWhite" Grid.Row="2" Grid.Column="0" Clicked="Btn4_Clicked"/>
+            <Button Text="5" BackgroundColor="AntiqueWhite" Grid.Row="2" Grid.Column="1" Clicked="Btn5_Clicked"/>
+            <Button Text="6" BackgroundColor="AntiqueWhite" Grid.Row="2" Grid.Column="2" Clicked="Btn6_Clicked"/>
+
+            <Button Text="1" BackgroundColor="AntiqueWhite" Grid.Row="3" Grid.Column="0" Clicked="Btn1_Clicked"/>
+            <Button Text="2" BackgroundColor="AntiqueWhite" Grid.Row="3" Grid.Column="1" Clicked="Btn2_Clicked"/>
+            <Button Text="3" BackgroundColor="AntiqueWhite" Grid.Row="3" Grid.Column="2" Clicked="Btn3_Clicked"/>
+
+            <Button Text="0" BackgroundColor="AntiqueWhite" Grid.Row="4" Grid.Column="1" Clicked="BtnDigits_Clicked"/>
+        </Grid>
+    </ContentPage.Content>
 
 </ContentPage>
